# llm_survey

./: .gitignore  README.md  build.sh  build_html.py  embeddings.py  evaluate_experiment.elv  evaluation.md  evaluation_prompt_template.md  llm_log.jsonl  marking.py  model_test.sh  models  prompt.md  pyproject.toml  render.yaml  similar.py  solution.json  solution.jsonl
llm_survey/: __main__.py  build.py  cli.py  data.py  embeddings.py  evaluate.py  init.py  models.py  prompts.py  query.py  run.py  templating.py
solutions/: 1.md  2.md
templates/: consistency.html.j2  evaluations.html.j2  evaluators.html.j2  github-banner.html.j2  head.html.j2  index.html.j2  model.html.j2  nav.html.j2  primary_nav.html.j2  rankings.html.j2  similarity.html.j2
tests/: conftest.py  test_build.py  test_data.py  test_embeddings.py  test_evaluate.py  test_models.py  test_prompts.py  test_query.py  test_run.py
