[tool.poetry]
name = "llm-survey"
version = "0.1.0"
description = ""
authors = ["Adam Kelly <adam@cthulahoops.org>"]
readme = "README.md"
packages = [{include = "llm_survey"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
markdown = "^3.6"
numpy = "^1.26.4"
marshmallow = "^3.21.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
