[tool.poetry]
name = "llm-survey"
version = "0.1.0"
description = ""
authors = ["Adam Kelly <adam@cthulahoops.org>"]
readme = "README.md"
packages = [{include = "llm_survey"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
markdown = "^3.6"
numpy = "^1.26.4"
marshmallow = "^3.21.1"
openai = "^1.30.5"
tqdm = "^4.66.4"
sqlalchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.5.2"
pytest = "^8.2.1"
hypothesis = {extras = ["numpy"], version = "^6.103.0"}
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
llm_survey = "llm_survey.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
